1999-12-12  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (TopLevel): Require `scram-md5'.

1999-12-11  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (sasl-scram-md5-client-msg-1): New function.
	(sasl-scram-md5-client-msg-2): New function.
	(sasl-scram-md5-authenticate-server): New function.
	(sasl-scram-md5-client-security-info): New variable.

1999-12-09  Kenichi OKADA <okada@opaopa.org>

	* mime-def.el (mime-library-product): Up.

1999-12-06  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (sasl-number-base36): New function.
	(sasl-unique-id): New function.
	(sasl-unique-id-char): New variable.
	* scram-md5.el (scram-make-unique-nonce): Fix to use `sasl-unique-id'.

1999-12-06  Kenichi OKADA <okada@opaopa.org>

	* sha1-el.el: Fix.
	* hex-util.el: Fix.


1999-12-06  Kenichi OKADA <okada@opaopa.org>

	* SLIM: Version 1.13.4 released.

1999-12-04  Kenichi OKADA <okada@opaopa.org>

	* SLIM-VERION: Add code name.

1999-12-03  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Fix.

1999-12-02  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Enclose by `as-binary-process'.

1999-12-02  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Fix.

1999-12-02  Kenichi OKADA <okada@opaopa.org>

	* scram-md5.el (scram-make-unique-nonce): Fix.

1999-12-02  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-send-command): Add new optional argument
	to delete insecure words in a trace buffer.
	(smtp-auth-cram-md5): Update.
	(smtp-auth-plain): Update.
	(smtp-auth-login): Update.

1999-12-02  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Comment out vain commands.

1999-12-02  Kenichi OKADA <okada@opaopa.org>

	* scram-md5.el: New file.
	* FLIM-ELS (flim-modules): Add `scram-md5'.

1999-12-01  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-auth-anonymous): New function.
	(smtp-authentication-method-alist): Add anonymous.

1999-12-01  Kenichi OKADA <okada@opaopa.org>

	* SLIM-VERSION: Fix.
	* smtp.el: Fix Author.